Fix all unit tests and version conflicts