@@ -1,29 +1,39 @@
 package com.kohang.fsi251notifier.azure;
 
-import com.kohang.fsi251notifier.model.FSI251Data;
-import com.kohang.fsi251notifier.repository.ExceptionRepository;
-import com.kohang.fsi251notifier.repository.FSI251Repository;
-import com.kohang.fsi251notifier.util.TestUtil;
-import org.junit.jupiter.api.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+import java.io.ByteArrayOutputStream;
+import java.io.InputStream;
+import java.util.List;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.MethodOrderer.OrderAnnotation;
+import org.junit.jupiter.api.Order;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.TestMethodOrder;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.core.io.ResourceLoader;
 
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.nio.file.Files;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import com.kohang.fsi251notifier.model.FSI251Data;
+import com.kohang.fsi251notifier.repository.ExceptionRepository;
+import com.kohang.fsi251notifier.repository.FSI251Repository;
+import com.kohang.fsi251notifier.util.TestUtil;
 
 @SpringBootTest(classes = {FSI251RecongnizerUnitTest.class})
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @TestMethodOrder(OrderAnnotation.class)
+@ExtendWith(MockitoExtension.class)
 class FSI251RecongnizerUnitTest {
 
 	@Mock
@@ -38,45 +48,44 @@ class FSI251RecongnizerUnitTest {
 	@Autowired
 	private ResourceLoader resourceLoader;
 
-	@Value("${azure_recognition_key}")
+	@Value("${azure.recognition.key}")
 	private String azureKey;
-	@Value("${azure_recognition_endpoint}")
+	@Value("${azure.recognition.endpoint}")
 	private String azureEndPoint;
 
 	private final List<String> fileList = List.of(TestUtil.SAMPLE_FILE, TestUtil.SAMPLE_FILE_1, TestUtil.SAMPLE_FILE_2, TestUtil.SAMPLE_FILE_EXCEPTION);
 	
-	@BeforeEach
-	void init() {
-		
-		try {
+    @BeforeEach
+    void init() throws Exception {
 
-			ByteArrayOutputStream sampleFileBaos = new ByteArrayOutputStream();
-			File sampleFile = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE).getFile();
-			sampleFileBaos.writeBytes(Files.readAllBytes(sampleFile.toPath()));
+        ByteArrayOutputStream sampleFileBaos = new ByteArrayOutputStream();
+        try (InputStream is = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE).getInputStream()) {
+            sampleFileBaos.writeBytes(is.readAllBytes());
+        }
 
-			ByteArrayOutputStream sampleFile1Baos = new ByteArrayOutputStream();
-			File sampleFile1 = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE_1).getFile();
-			sampleFile1Baos.writeBytes(Files.readAllBytes(sampleFile1.toPath()));
+        ByteArrayOutputStream sampleFile1Baos = new ByteArrayOutputStream();
+        try (InputStream is = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE_1).getInputStream()) {
+            sampleFile1Baos.writeBytes(is.readAllBytes());
+        }
 
-			ByteArrayOutputStream sampleFile2Baos = new ByteArrayOutputStream();
-			File sampleFile2 = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE_2).getFile();
-			sampleFile2Baos.writeBytes(Files.readAllBytes(sampleFile2.toPath()));
+        ByteArrayOutputStream sampleFile2Baos = new ByteArrayOutputStream();
+        try (InputStream is = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE_2).getInputStream()) {
+            sampleFile2Baos.writeBytes(is.readAllBytes());
+        }
 
-			ByteArrayOutputStream sampleFileExpBaos = new ByteArrayOutputStream();
-			File sampleFileExp = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE_EXCEPTION).getFile();
-			sampleFileExpBaos.writeBytes(Files.readAllBytes(sampleFileExp.toPath()));
+        ByteArrayOutputStream sampleFileExpBaos = new ByteArrayOutputStream();
+        try (InputStream is = resourceLoader.getResource("classpath:" + TestUtil.SAMPLE_FILE_EXCEPTION).getInputStream()) {
+            sampleFileExpBaos.writeBytes(is.readAllBytes());
+        }
 
-			when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE)).thenReturn(sampleFileBaos);
-			when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE_1)).thenReturn(sampleFile1Baos);
-			when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE_2)).thenReturn(sampleFile2Baos);
-			when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE_EXCEPTION)).thenReturn(sampleFileExpBaos);
+        when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE)).thenReturn(sampleFileBaos);
+        when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE_1)).thenReturn(sampleFile1Baos);
+        when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE_2)).thenReturn(sampleFile2Baos);
+        when(accesser.getSrcFileByteArrayOutputStream(TestUtil.SAMPLE_FILE_EXCEPTION)).thenReturn(sampleFileExpBaos);
 
-			Thread.sleep(20000);
+        Thread.sleep(20000);
 
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
-	}
+    }
 
 	@Test
 	@DisplayName("Repository contain certs")
@@ -85,7 +94,6 @@ class FSI251RecongnizerUnitTest {
 		
 		when(accesser.getSrcFiles()).thenReturn(fileList);
 		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO)).thenReturn(TestUtil.getFSI251Data(0));
-		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO_1)).thenReturn(TestUtil.getFSI251Data(1));
 		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO_2)).thenReturn(TestUtil.getFSI251Data(2));
 		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO_EXCEPTION)).thenReturn(TestUtil.getFSI251Data(3));
 
@@ -113,7 +121,6 @@ class FSI251RecongnizerUnitTest {
 
 		when(accesser.getSrcFiles()).thenReturn(fileList);
 		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO)).thenReturn(null);
-		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO_1)).thenReturn(null);
 		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO_2)).thenReturn(null);
 		when(fsi251Repo.findByCertNo(TestUtil.SAMPLE_CERT_NO_EXCEPTION)).thenReturn(null);
 		//when
